<resources>
    <string name="app_name">INFOGRAN</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrasena">Contrasena</string>
    <string name="button_Text">LOGIN</string>
    <string name="no_tienes_cueta">" No tienes cueta? "</string>
    <string name="crea_una_aqui">Crea una aqui</string>
    <string name="correo" />
    <string name="Nombre" />
    <string name="nombre" />
    <string name="usuario" />
    <string name="contrasenaa" />
    <string name="confirme_contrasena" />
    <string name="button_text_create_account">UNETE</string>
    <string name="title_crear_cuenta">crear cuenta</string>
    <string name="carlos_vargas">carlos Vargas</string>
    <string name="hace_cardview">Hace</string>
    <string name="dias_cardview">4 dias</string>
    <string name="me_gusta_cardview">20 me gusta</string>
    <string name="buscar_item">buscar</string>
    <string name="home_item">Home</string>
    <string name="yo_item">Yo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_gome_fragment">Home</string>
    <string name="text_megusta_image_detail">me gusta</string>
    <string name="text_cantidad_megusta_image_detail">10</string>
    <string name="text_title_image_detail">Todo copas en la playa</string>
    <string name="text_content_image_detail">1.- MACIMIENTO Y EXPANSION DE LA LETRA EN LA COM GRAFICA. EL PRIMATE ERGUIDO-LA LIBERACION DE LAS MANOS EL TRAZO.EMERGENCIA DE LA EXPRESION GRAFICA DE LA REPRESENTACION PERCEPTUAL A LA PRESENTACIO Y VERBAL 2.-EL PRINCIPIO GUTENBERG LOS TRES INVENTORES DE LA TIPOGRAFIA LAS CUATRO FUNCIONES-SIGNOS DE LA LETRA:MAYUSCUL LAS CURCIVA Y ORNAMENTADA</string>
    <string name="transitionName_imageCardView">transitionName_imageCardView</string>
</resources>