<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:theme="@style/Theme.INFOGRAN.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/purple_500">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/paddingTop_linearLayout_profile"
                android:paddingBottom="@dimen/paddingBottom_linearLayout_profile"
                android:layout_gravity="center|top"
                android:layout_marginLeft="@dimen/padding_card"
                android:layout_marginRight="@dimen/padding_card"
                android:gravity="center">

                <TextView
                    android:id="@+id/username_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carlos_vargas"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_username_profile"/>


            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_profile"
            app:collapseContentDescription="@string/text_cantidad_megusta_image_detail"
            app:popupTheme="@style/Theme.INFOGRAN.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_500">

        </androidx.appcompat.widget.Toolbar>




    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:paddingTop="@dimen/padding_card"
        android:paddingLeft="@dimen/padding_card"
        android:paddingRight="@dimen/padding_card">
    </androidx.recyclerview.widget.RecyclerView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/size_circle_image_profile"
        android:layout_height="@dimen/size_circle_image_profile"
        android:src="@drawable/profile"
        android:layout_gravity="top|center"
        android:layout_marginTop="@dimen/marginTop_circle_image_profile"
        android:elevation="@dimen/elevation_circle_image_profile"/>

    <TextView
        android:id="@+id/username_appbar_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_username_appbar_profile"
        android:elevation="@dimen/elevation_username_appbar_profile"
        android:layout_marginLeft="@dimen/marginLeft_username_appbar_profile"
        android:layout_marginTop="@dimen/marginTop_username_appbar_profile"
        android:textColor="@color/white"
        android:alpha="0"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>